# Fumble

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
fumble/: __init__.py  auth.py  chat.py  db.py  requirements.txt  schema.sql
fumble/static/: style.css
fumble/static/js/: create.js
fumble/templates/: base.html
fumble/templates/auth/: mfa.html
fumble/templates/chat/: index.html  room.html
fumble/templates/mfa/: challenge.html  setup.html
fumble/tests/: conftest.py  data.sql  test_auth.py  test_chat.py  test_index.py
