[project]
name = "Fumble"
version = "1.0.0"
description = "A no-nonsense full-stack group messaging application."
dependencies = [
    "flask",
    "Flask-SocketIO",
    "flask_qrcode",
    "pyotp",
    "pymongo",
    "flask_qrcode",
    "werkzeug",
    "pytest",
    "coverage"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"